// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointAccordion should match snapshot closed 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        {
          "backgroundColor": "#303030",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": false,
            "expanded": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            false,
            [
              {
                "padding": 8,
              },
              {
                "backgroundColor": "#303030",
                "borderColor": "#ffd600",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "margin": 4,
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              [
                {
                  "margin": 8,
                },
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  {
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "fontSize": 16,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                    {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "marginRight": 10,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Temper
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Truck
                  </Text>
                </View>
                <View>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "margin": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  {
                    "marginBottom": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅀
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PointAccordion should match snapshot open 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        {
          "backgroundColor": "#303030",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": false,
            "expanded": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            false,
            [
              {
                "padding": 8,
              },
              {
                "backgroundColor": "#303030",
                "borderColor": "#31adff",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "margin": 4,
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              [
                {
                  "margin": 8,
                },
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  {
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "fontSize": 16,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                    {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "marginRight": 10,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Temper
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Truck
                  </Text>
                </View>
                <View>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "margin": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  {
                    "marginBottom": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅀
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
